fixed flexbox spacing in projects section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,15 +106,13 @@ p {
     display: flex;
     flex-wrap: wrap;
     flex-basis: 50%;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin: auto;
     width: 80%;
     height: auto;
     max-width: 100%;
     padding: 0px;
-    
-    
-   
+
 }
 
 
@@ -123,19 +121,19 @@ p {
     height: auto;
     width: 28%;
     border: 2px solid black;
-    margin: 20px 20px 20px 20px;
+    margin: 20px 0px 20px 20px;
 }
 
 #refactor {
     height: auto;
-    width: 57%;
+    width: 70%;
     border: 2px solid black;
-    margin: 20px 0px 20px 20px;
+    margin: 20px 0px 20px 0px;
 }
 
 #big {
     height: auto;
-    width: 90%;
+    width: 100%;
     border: 2px solid black;
 }
 
@@ -292,19 +290,59 @@ p {
     text-align: center;
     font-weight: lighter;
     font-size: 20px;
-}
+    }
 
-.reach-out a{
+    .reach-out a{
     display: block;
     margin: auto;
     text-align: center;
     font-weight: lighter;
     font-size: 20px;
 
+    }
+
+    .screenshot{
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 100%;
+    justify-content: center;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    padding: 0px;
+
+    }
+
+    #js {
+    height: auto;
+    width: 28%;
+    border: 2px solid black;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 0;
+    margin-right: 0; 
+    
+    }
+
+    #refactor {
+    height: auto;
+    width: 80%;
+    border: 2px solid black;
+    margin-top: 10px;
+    margin-bottom: 0;
+    margin-right: 0;
+    margin-left: 0;
+    
+    }
+
+    #big {
+    height: auto;
+    width: 100%;
+    border: 2px solid black;
+    margin: auto;
+    }   
 }
-
-
-
 
 
 
